# gitsem

./: .gitignore  BLUEPRINT.md  CONTEXT.md  README.md  pyproject.toml
docs/worklogs/: 2026-04-19-09-49-initial-implementation.md  2026-04-19-10-24-agent-usability.md  2026-04-19-11-07-sync-all-push.md  2026-04-19-11-21-rename-switch-migrate.md  2026-04-19-11-50-repair-floating-tags.md
scripts/: bump-version.sh  validate-worklog.sh
src/gitsem/: __init__.py  __main__.py  cli.py  errors.py  git_ops.py  tag_service.py  versioning.py
tests/: __init__.py  test_cli.py  test_integration.py  test_tag_service.py  test_versioning.py
