[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gitsem"
version = "0.2.0"
description = "Docker-like floating semantic-version tags for Git repositories"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["git", "semver", "tags", "versioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
gitsem = "gitsem.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
